[gd_scene load_steps=7 format=3 uid="uid://cpagvkkixaktd"]

[ext_resource type="Texture2D" uid="uid://btronouxiv6i3" path="res://Back.png" id="1_pjvc8"]
[ext_resource type="Script" path="res://CreatePanel.gd" id="1_xu88v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_224gn"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.713726, 0.196078, 0.196078, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qk5nc"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2o41o"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxytb"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="CreatePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xu88v")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 28.0
offset_right = 159.0
offset_bottom = 141.0
icon = ExtResource("1_pjvc8")
flat = true
alignment = 2
icon_alignment = 1
expand_icon = true

[node name="AddButton" type="Button" parent="."]
layout_mode = 0
offset_left = 213.0
offset_top = 175.0
offset_right = 628.0
offset_bottom = 311.0
theme_override_colors/font_color = Color(0.713726, 0.196078, 0.196078, 1)
theme_override_colors/font_pressed_color = Color(0.713726, 0.196078, 0.196078, 1)
theme_override_colors/font_hover_color = Color(0.713726, 0.196078, 0.196078, 1)
theme_override_colors/font_focus_color = Color(0.713726, 0.196078, 0.196078, 1)
theme_override_colors/font_hover_pressed_color = Color(0.713726, 0.196078, 0.196078, 1)
theme_override_colors/font_disabled_color = Color(0.713726, 0.196078, 0.196078, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_224gn")
theme_override_styles/hover = SubResource("StyleBoxFlat_224gn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_224gn")
theme_override_styles/disabled = SubResource("StyleBoxFlat_224gn")
theme_override_styles/focus = SubResource("StyleBoxFlat_224gn")
text = "+"

[node name="ButtonHolder" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameTaskPanel" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 58.0
offset_top = 555.0
offset_right = 796.0
offset_bottom = 854.0

[node name="ColorRect" type="ColorRect" parent="NameTaskPanel"]
layout_mode = 0
offset_left = -118.0
offset_top = -575.0
offset_right = 854.0
offset_bottom = 1093.0
color = Color(0, 0, 0, 0.647059)

[node name="Panel" type="Panel" parent="NameTaskPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qk5nc")

[node name="TextEdit" type="TextEdit" parent="NameTaskPanel"]
layout_mode = 0
offset_left = 180.0
offset_top = 75.0
offset_right = 551.0
offset_bottom = 133.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_constants/caret_width = 4
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_2o41o")
placeholder_text = "  Task name"
caret_blink = true
caret_blink_interval = 0.4

[node name="Create" type="Button" parent="NameTaskPanel"]
layout_mode = 0
offset_left = 238.0
offset_top = 188.0
offset_right = 486.0
offset_bottom = 254.0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_nxytb")
text = "Create"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="NameTaskPanel/Create" to="." method="_on_create_pressed"]
